[package]
name = "spatial"
version = "0.1.6"
edition = "2021"
publish = false
authors = ["Leonid (Hara Red) Prokhorenko <rtc6fg4.fejg2@gmail.com>"]
license = "MIT"

[dependencies]
num = { version = "0.4.0", optional = true }
serde = { version = "1.0.142", optional = true, features = ["derive"] }
uom = { version = "0.36.0", optional = true }

[features]
default = []
full = ["serde", "num", "uom"]
serde = ["dep:serde"]
num = ["dep:num"]
uom = ["dep:uom"]
